--- a/code/app/templates/readmission.html
+++ b/code/app/templates/readmission.html
@@ -8,16 +8,16 @@
 
 <body>
     <br>
-    <br>
+    <br><br><br>
     <div class="container">
         <div class="row text-left">
-            <h1>Re-admission Curated for <p style="display:inline;color:#cc3d33;font-family:Lato;font-weight:500"><strong>Grandma Rudy</strong></p></h1>
-            <h4>Agency: XYZ Home Health Agency</h4>
+            <h1><b>Re-admission Curated for </b><p style="display:inline;color:#cc3d33;font-family:Lato;font-weight:500"><strong><b>Grandma Rudy</b></strong></p></h1>
+            <h4>Agency: 21st Century Home Health Services Inc.	</h4>
         </div>
-        <br><br><br><br>
+        <br><br>
         <div class="row">
             <div class="col-md-6 align-items-stretch align-middle">
-                <h4><p style="display:inline;color:#cc3d33;font-family:Lato;font-weight:500"><strong>Grandma Rudy's Metric</strong></p></h4>
+                <h4><p style="display:inline;color:#cc3d33;font-family:Lato;font-weight:500"><strong><b>Grandma Rudy's Metric</b></strong></p></h4>
                 <h5>
                 Female<br>
                 74 years old<br>
