--- a/code/app/templates/base.html
+++ b/code/app/templates/base.html
@@ -129,7 +129,7 @@
 
         <div class="row content">
           <div class="col-lg-6 pt-4 pt-lg-0">
-            Our solution is an integrated home health referral system aimed to mitigate existing inefficient communication streams, enable a streamlined discharge process, and optimize the time for a patient to get care, as well as the quality. 
+            Our product is an integrated home health referral system aimed to mitigate existing inefficient communication streams, enable a streamlined discharge process, and optimize the time for a patient to get care, as well as the quality. 
             <br><br>
             The system will primarily be a recommendation dashboard for discharge planners to quickly and seamlessly generate home health agency recommendations personalized to the patient, with clear and relevant comparison metrics. The use of real-time readmissions data ensures that the system continues to improve, optimizing for quality patient care.
             <br><br>
